# ChangeLog for net-im/kadu-screenshot
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-screenshot-0.6.0_p20080104.ebuild,
  -kadu-screenshot-0.20080104.ebuild:
  Fixed version AGAIN.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-screenshot-0.20080104.ebuild, -kadu-screenshot-20080104.ebuild:
  Changed versioning scheme to avoid problems during update.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-screenshot-0.6.5_rc2.ebuild, +kadu-screenshot-0.6.5.ebuild:
  Bumped. Removed previous version.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-screenshot-0.6.5_rc2.ebuild:
  Bumped.
