@@ -1,5 +1,6 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
 DIST screenshot-20080104.tar.bz2 14130 RMD160 a1d147bb2a678fb4f1faf8cb0d5d39e5c6e0fa27 SHA1 f22e641af46261a46a35b5531ae03fe0e5298842 SHA256 3cd7609c936dea0af3df97b6e1d190c1eed4128a497524bd0703a177dedde86a
-EBUILD kadu-screenshot-0.6.0_p20080104.ebuild 251 RMD160 8312903624579071b3e9de1eb4963abe7a37478c SHA1 4fa7b67d2d085f3eaaa0c7b6eaeccda87f6d351f SHA256 f4934806b5b118a2b349899a0d3a752cc2949363288ed2dddec3ed4ca08a8fcd
-EBUILD kadu-screenshot-0.6.5.ebuild 153 RMD160 3dfd93fb1f5b2564edb1bcd551b1080e779a9766 SHA1 20f56f0d155ff09fc24d4bfc26f1baa01d667b8b SHA256 db6f4bb37abe62ce72e78417bebe169977890cf8784cbe1c069977d64b1b5872
-MISC ChangeLog 711 RMD160 1c409fbbde15b522eea1975b681abed3a3da8093 SHA1 a53564e4a9f1164ffedd0c6c714c257f63c58ec0 SHA256 0cc003f3bdf3d1d10cb5018bbd5cc5d2dc6aabf8700d3aa0f6d4f563fd7fe1bb
+EBUILD kadu-screenshot-0.6.0_p20080104.ebuild 380 RMD160 020136c210143165479aa56134c7d5fd163d5adf SHA1 a440a2b4e43494658bd14928e402c938efe4a3d1 SHA256 593fade5d7ce1e363d2e995397557e1424c7bc479932a38b3c60244fd7c07f67
+EBUILD kadu-screenshot-0.6.5.1.ebuild 247 RMD160 a86bc09ea8a678f6ec800ee8f993a206c9991172 SHA1 f6a0824985e3db917f8d13c13287a4eeb5474c12 SHA256 ab536dd491e9b88a12ecf21a14a50398eb921b836a7b8d06a89dfdd914e0e6ce
+MISC ChangeLog 940 RMD160 d270d224a9a6889fdbc4918295e9b504980e4427 SHA1 c0e4d61dfe64e9e1c8e2b84dab2172a4f2707440 SHA256 c86722e0191de3f134311f21a5af1c67daa116da9f69cc98a38fe75c019f12f5
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
