@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd></herd>
+<maintainer>
+  <email>mziab@o2.pl</email>
+  <name>Michał Ziąbkowski</name>
+</maintainer>
+</pkgmetadata>
